# Review

./:  interview.md  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENT_TRACKING.md  LICENSE  PROJECT_HEALTH.md  PROJECT_HEALTH_AUDIT.md  PROJECT_HEALTH_COMPLETION_REPORT.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  security.yml  test.yml
4Paradigm/: OpenClaw_话题触发钳钳人格_原理说明.md  OpenClaw_钳钳人设与多渠道会话_总结.md  小龙虾跨平台配置与自动化实践指南.md  演示.md  龙虾人风格提案 - Sheet1.csv
4Paradigm/OpenClaw-电竞解说-小龙虾/: README.md  SKILL.md  SOUL.md  对话示例.md  电竞解说-小龙虾使用说明.md  设计方案.md
Aliyun/: GenAI-SA-一页纸速记.md  GenAI-SA-面试准备.md  GenAI_SA_三面_口述版与模拟面试.md  Model-Studio-平台说明.md  阿里云GenAI_SA_HRG终面准备_专业问答逐字稿.md  阿里云GenAI_SA_三面准备.md
Anker/: Anker_一面_45分钟_逐字对话稿.md  Anker_模拟面试全流程_智能创作平台PM.md
Baidu/: 面试问答全流程-百度AI搜索产品经理.md
ByteDance/: ByteDance_一面_45分钟_逐字对话稿.md  ByteDance_临场应急卡.md  ByteDance_关键词卡片_高频清单.md  ByteDance_大模型运营_电商方向_模拟面试全流程.md  ByteDance_理想候选人业务画像.md  ByteDance_电商业务知识深度补充.md  ByteDance_自我介绍_词汇升级版.md  ByteDance_面试官偏好_候选人画像.md  ByteDance_面试导航中心_超链接版.md  JD关键词详解_业务理解与数据驱动篇.md  JD关键词详解_加分项篇.md  JD关键词详解_大模型方案编排与知识库.md  JD关键词详解_模型调优与协同落地.md  JD关键词详解_职位要求篇.md  JD关键词详解_行业需求承接与闭环机制.md  JD关键词详解_软技能篇.md  面试核心能力与日常工作.md
China_Mobile/: CM_JD.md  CM_一面_45分钟_逐字对话稿.md  CM_模拟面试全流程_一面准备.md
DIDI/: 滴滴平台技术-第一轮专业面试准备.md
DingTalk/: 钉钉-AI表格文档-二面模拟面试准备.md
Item/: 内推资源清单.md  学历背景回应话术.md  岗位深度匹配分析报告.md  岭南大学_vs_ASU_计算机硕士对比分析.md  投递策略与目标公司清单.md  王健霖个人简历_产品版.md  行业深度分析_AI内容创作与企业知识库.md  面试话术_3个核心项目.md
NIO/: NIO_JD.md  NIO_岗前知识储备_企业智能知识平台.md  NIO_微博RAG映射企业知识平台_10分钟与口语稿.md  NIO_模拟面试_知识平台_PM.md
PDD/: 拼多多_产品运营_比价系统_一面模拟面试_45分钟逐字对话稿.md  拼多多_产品运营_比价系统_一面模拟面试全流程.md
Proj/: .env.example  .gitignore  Aliyun.py  Cursor-Agent-性价比配置.md  README.md  app_gradio.py  pyproject.toml  pytest.ini  requirements-dev.txt  云服务实操说明.md
Proj/tests/: __init__.py  conftest.py  test_aliyun.py  test_app_gradio.py
SKILLS/interview-qa-jd-resume/: README.md  SKILL.md  SOUL.md  对话示例.md  设计方案.md
issues/: 1.md  1_Add_gitignore.md
rhetoric/: 01-离职与短任期.md  02-职业规划与换工作动机.md  03-薪资与福利.md  04-履历时间线与重叠.md  05-项目深挖与STAR.md  06-压力面刁钻题补充.md  07-反问与收尾.md  08-阿里HRBP-HRG面试考察与问答对策.md  README.md  面试推理文件1.md  面试推理文件2.md
